src/objects/Answer__c.object
<CustomObject>
    <description>These are the answers associated with a question.</description>
    <fields>
        <fullName>Answer__c</fullName>
        <description>The answer to display to the exam taker.</description>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Answer_is_Correct__c</fullName>
        <formula>IF(AND(Selected__c, Correct__c),1,IF(AND(NOT(Selected__c),NOT(Correct__c)),1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Answer is Correct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Correct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this answer is a correct answer.</description>
        <label>Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>The sequence the answer should appear within the question.</description>
        <label>Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>The related question that the answer belongs to.</description>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating if the exam taker has chosen this answer.</description>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <label>Answer</label>
    <nameField>
        <label>Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>